# python-template

./: .justfile  .pre-commit-config.yaml  Makefile.include  README.md  environment.yaml  environment.yml  pyproject.toml  requirements.txt  setup.py
